--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900,900italic"
         rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>RELAP</title>
 </head>
 
@@ -247,7 +247,6 @@
                             <img class="team__img5" src="/img/team/4.png" alt="Face">
                             <img class="team__img6" src="/img/team/5.png" alt="Face">
                         </div>
-                        <div class="team__content">
                             <div class="team__main-block main-block">
                                 <div class="team__block-header block-header">
                                     <p class="block-header__subtitle block-header_color_white">Repellendus</p>
@@ -260,7 +259,6 @@
                                 </p>
                                 <a href="" class="button button_color_yellow">Our team</a>
                             </div>
-                        </div>
                     </div>
                 </div>
             </section>
@@ -320,7 +318,7 @@
             <section class="blog">
                 <div class="container blog__container">
                     <div class="blog__content">
-                        <div class="blog__main-block main-block">
+                        <div class="blog__main-block main-block main-block_black">
                             <div class="blog__block-header block-header">
                                 <p class="block-header__subtitle">Nisi ut aliquid</p>
                                 <h2 class="block-header__title">Omnis voluptas
@@ -374,7 +372,7 @@
                             <div class="links-block__block links-block__block-1">
                                 <ul class="links-block__list">
                                     <li class="links-block__item "><a href=""
-                                            class="links-block__link-main">Consectetur</a></li>
+                                            class="links-block__link links-block__link_first">Consectetur</a></li>
                                     <li class="links-block__item"><a href="" class="links-block__link">Adipiscing</a>
                                     </li>
                                     <li class="links-block__item"><a href="" class="links-block__link">Elit</a></li>
@@ -383,7 +381,7 @@
                             </div>
                             <div class="links-block__block links-block__block-2">
                                 <ul class="links-block__list">
-                                    <li class="links-block__item "><a href="" class="links-block__link-main">Tempor</a>
+                                    <li class="links-block__item "><a href="" class="links-block__link links-block__link_first">Tempor</a>
                                     </li>
                                     <li class="links-block__item"><a href="" class="links-block__link">Incididunt</a>
                                     </li>
@@ -393,7 +391,7 @@
                             </div>
                             <div class="links-block__block links-block__block-3">
                                 <ul class="links-block__list">
-                                    <li class="links-block__item"><a href="" class="links-block__link-main">Magna</a>
+                                    <li class="links-block__item"><a href="" class="links-block__link links-block__link_first">Magna</a>
                                     </li>
                                     <li class="links-block__item"><a href="" class="links-block__link">Aliqua</a>
                                     </li>
