--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
                             <div class="image-block__item">
                                 <img src="/img/works-examples/31.png" alt="Variation of work">
                                 <div class="image-block__content">
-                                    <h4 class="image-block__title">Exercitation</h4>
+                                    <p class="image-block__title">Exercitation</p>
                                     <p class="image-block__text">Ullamco laboris</p>
                                 </div>
                             </div>
                             <div class="image-block__item">
                                 <img src="/img/works-examples/31.png" alt="Variation of work">
                                 <div class="image-block__content">
-                                    <h4 class="image-block__title">Exercitation</h4>
+                                    <p class="image-block__title">Exercitation</p>
                                     <p class="image-block__text">Ullamco laboris</p>
                                 </div>
                             </div>
                             <div class="image-block__item">
                                 <img src="/img/works-examples/33.png" alt="Variation of work">
                                 <div class="image-block__content">
-                                    <h4 class="image-block__title">Exercitation</h4>
+                                    <p class="image-block__title">Exercitation</p>
                                     <p class="image-block__text">Ullamco laboris</p>
                                 </div>
                             </div>
@@ -185,7 +185,7 @@
                                 <div class="items-block__image items-block__image-1">
                                     <img class="items-block__img" src="/img/advantages/1.svg" alt="Picture details">
                                 </div>
-                                <h4 class="items-block__title">Consequuntur</h4>
+                                <p class="items-block__title">Consequuntur</p>
                                 <p class="items-block__text">Enim ipsam voluptatem quia voluptas sit aspernatur aut odit
                                     aut fugit</p>
                             </div>
@@ -193,7 +193,7 @@
                                 <div class="items-block__image items-block__image-2">
                                     <img class="items-block__img" src="/img/advantages/2.svg" alt="Picture details">
                                 </div>
-                                <h4 class="items-block__title">Voluptatem</h4>
+                                <p class="items-block__title">Voluptatem</p>
                                 <p class="items-block__text">Sed quia non numquam eius modi tempora incidunt ut labore
                                     et dolore magnam</p>
                             </div>
@@ -201,7 +201,7 @@
                                 <div class="items-block__image items-block__image-3">
                                     <img class="items-block__img" src="/img/advantages/3.svg" alt="Picture details">
                                 </div>
-                                <h4 class="items-block__title">Quisquam</h4>
+                                <p class="items-block__title">Quisquam</p>
                                 <p class="items-block__text">Quis nostrum exercitationem ullam corporis suscipit
                                     laboriosam</p>
                             </div>
@@ -209,7 +209,7 @@
                                 <div class="items-block__image items-block__image-4">
                                     <img class="items-block__img" src="/img/advantages/4.svg" alt="Picture details">
                                 </div>
-                                <h4 class="items-block__title">Aliquid</h4>
+                                <p class="items-block__title">Aliquid</p>
                                 <p class="items-block__text">Quis autem vel eum iure reprehenderit voluptate velit esse
                                     quam nihil</p>
                             </div>
@@ -217,7 +217,7 @@
                                 <div class="items-block__image items-block__image-5">
                                     <img class="items-block__img" src="/img/advantages/5.svg" alt="Picture details">
                                 </div>
-                                <h4 class="items-block__title">Excepteur</h4>
+                                <p class="items-block__title">Excepteur</p>
                                 <p class="items-block__text">Sint occaecat cupidatat non proident culpa qui officia
                                     deserunt mollit anim</p>
                             </div>
@@ -225,7 +225,7 @@
                                 <div class="items-block__image items-block__image-6">
                                     <img class="items-block__img" src="/img/advantages/6.svg" alt="Picture details">
                                 </div>
-                                <h4 class="items-block__title">Accusamus</h4>
+                                <p class="items-block__title">Accusamus</p>
                                 <p class="items-block__text">Odio dignissimos ducimus qui blanditiis praesentium
                                     voluptatum</p>
                             </div>
@@ -248,7 +248,7 @@
                             <img class="team__img6" src="/img/team/5.png" alt="Face">
                         </div>
                             <div class="team__main-block main-block">
-                                <div class="team__block-header block-header">
+                                <div class="main-block__block-header block-header">
                                     <p class="block-header__subtitle block-header_color_white">Repellendus</p>
                                     <h2 class="block-header__title">Temporibus quibusdam</h2>
                                 </div>
@@ -271,32 +271,32 @@
                             voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repella.</p>
                     </div>
                     <div class="partners__reviews reviews">
-                        <div class="reviews__item-review">
-                            <div class="review__user-avatar">
-                                <img class="reviews__ava-img" src="/img/partners/person1.png" alt="Face">
+                        <div class="reviews__item-review item-review">
+                            <div class="item-review__user-avatar">
+                                <img class="item-review__ava-img" src="/img/partners/person1.png" alt="Face">
                             </div>
-                            <h4 class="review__content">"Voluptatem accusantium doloremque laudantium, totam rem
+                            <p class="item-review__content">"Voluptatem accusantium doloremque laudantium, totam rem
                                 aperiam,
-                                eaque ipsa quae ab illo inventore veritatis"</h4>
-                            <p class="review__user-name">Evelyn Allen</p>
+                                eaque ipsa quae ab illo inventore veritatis"</p>
+                            <p class="item-review__user-name">Evelyn Allen</p>
                         </div>
-                        <div class="reviews__item-review">
-                            <div class="review__user-avatar">
-                                <img class="reviews__ava-img" src="/img/partners/person2.png" alt="Face">
+                        <div class="reviews__item-review item-review">
+                            <div class="item-review__user-avatar">
+                                <img class="item-review__ava-img" src="/img/partners/person2.png" alt="Face">
                             </div>
-                            <h4 class="review__content">"Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                            <p class="item-review__content">"Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
                                 odit aut
-                                fugit, sed quia consequuntur magni dolores"</h4>
-                            <p class="review__user-name">Malin Quist</p>
+                                fugit, sed quia consequuntur magni dolores"</з>
+                            <p class="item-review__user-name">Malin Quist</p>
                         </div>
-                        <div class="reviews__item-review">
-                            <div class="review__user-avatar">
-                                <img class="reviews__ava-img" src="/img/partners/person3.png" alt="Face">
+                        <div class="reviews__item-review item-review">
+                            <div class="item-review__user-avatar">
+                                <img class="item-review__ava-img" src="/img/partners/person3.png" alt="Face">
                             </div>
-                            <h4 class="review__content">"Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+                            <p class="item-review__content">"Neque porro quisquam est, qui dolorem ipsum quia dolor sit
                                 amet,
-                                consectetur, adipisci numquam eius"</h4>
-                            <p class="review__user-name">Pan Su</p>
+                                consectetur, adipisci numquam eius"</p>
+                            <p class="item-review__user-name">Pan Su</p>
                         </div>
                     </div>
                     <div class="partners__logo-block">
@@ -319,7 +319,7 @@
                 <div class="container blog__container">
                     <div class="blog__content">
                         <div class="blog__main-block main-block main-block_black">
-                            <div class="blog__block-header block-header">
+                            <div class="main-block__block-header block-header">
                                 <p class="block-header__subtitle">Nisi ut aliquid</p>
                                 <h2 class="block-header__title">Omnis voluptas
                                     assumenda</h2>
@@ -334,7 +334,7 @@
                             <img src="/img/blog/main-image.png" alt="Backgroung block picture"
                                 class="image-section__image">
                             <div class="image-section__content">
-                                <h4 class="image-section__title">Itaque earum rerum</h4>
+                                <p class="image-section__title">Itaque earum rerum</p>
                                 <p class="image-section__text">Temporibus autem quibusdam et aut officiis debitis aut
                                     rerum necessitatibus saepe eveniet ut et voluptates</p>
                                 <div class="image-section__botton-pic">
@@ -423,6 +423,7 @@
             acc[i].addEventListener("click", function () {
                 this.classList.toggle("active");
                 var panel = this.nextElementSibling;
+                this.parentNode.classList.toggle("active"); 
                 if (panel.style.display === "block") {
                     panel.style.display = "none";
                 } else {
