--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </ul>
                     </nav>
                 </div>
-                <a href="" class="button button_color_transparent">Contact Us</a>
+                <a href="" class="button header__button button_color_transparent">Contact Us</a>
             </div>
         </header>
         <main class="main">
@@ -47,7 +47,7 @@
                         <a href="" class="button button_color_yellow">Explore</a>
                     </div>
                     <div class="explore__image">
-                        <img src="img/explore/illustration.svg" alt="Стол с ноутбуком">
+                        <img class="explore__pic" src="img/explore/illustration.svg" alt="Стол с ноутбуком">
                         <div class="explore__decor explore__decor_1"></div>
                         <div class="explore__decor explore__decor_2"></div>
                         <div class="explore__decor explore__decor_3"></div>
@@ -69,24 +69,24 @@
                         </div>
                         <div class="notes__accordion accordion">
                             <div class="accordion__item">
-                                <button class="accordion__buttom">Totam rem aperiam</button>
-                                <div class="accordion__text_hidden">
+                                <button class="accordion__button">Totam rem aperiam</button>
+                                <div class="accordion__text">
                                     <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque
                                         nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
                                         assumenda est, omnis dolor repellendus.</p>
                                 </div>
                             </div>
                             <div class="accordion__item">
-                                <button class="accordion__buttom">Eaque ipsa quae</button>
-                                <div class="accordion__text_hidden">
+                                <button class="accordion__button">Eaque ipsa quae</button>
+                                <div class="accordion__text">
                                     <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque
                                         nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
                                         assumenda est, omnis dolor repellendus.</p>
                                 </div>
                             </div>
                             <div class="accordion__item">
-                                <button class="accordion__buttom">Inventore veritatis</button>
-                                <div class="accordion__text_hidden">
+                                <button class="accordion__button">Inventore veritatis</button>
+                                <div class="accordion__text">
                                     <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque
                                         nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
                                         assumenda est, omnis dolor repellendus.</p>
@@ -121,43 +121,46 @@
                         </div>
                         <div class="works-examples__bar">
                             <div class="works-examples__radio">
-                                <input id="radio-1" type="radio" name="radio" value="1" checked>
-                                <label for="radio-1">Quis Autem</label>
+                                <input class="works-examples__input" id="radio-1" type="radio" name="radio" value="1" checked>
+                                <label class="works-examples__label" for="radio-1">Quis Autem</label>
                             </div>
                             <div class="works-examples__radio">
-                                <input id="radio-2" type="radio" name="radio" value="2">
-                                <label for="radio-2">Reprehenderit</label>
+                                <input class="works-examples__input" id="radio-2" type="radio" name="radio" value="2">
+                                <label class="works-examples__label" for="radio-2">Reprehenderit</label>
                             </div>
                             <div class="works-examples__radio">
-                                <input id="radio-3" type="radio" name="radio" value="3">
-                                <label for="radio-3">Voluptate</label>
+                                <input class="works-examples__input" id="radio-3" type="radio" name="radio" value="3">
+                                <label class="works-examples__label" for="radio-3">Voluptate</label>
                             </div>
                             <div class="works-examples__radio">
-                                <input id="radio-4" type="radio" name="radio" value="4">
-                                <label for="radio-4">Molestiae</label>
+                                <input class="works-examples__input" id="radio-4" type="radio" name="radio" value="4">
+                                <label class="works-examples__label" for="radio-4">Molestiae</label>
                             </div>
                             <div class="works-examples__radio">
-                                <input id="radio-5" type="radio" name="radio" value="5">
-                                <label for="radio-5">Consequatur</label>
+                                <input class="works-examples__input" id="radio-5" type="radio" name="radio" value="5">
+                                <label class="works-examples__label" for="radio-5">Consequatur</label>
                             </div>
                         </div>
                         <div class="works-examples__image-block image-block">
                             <div class="image-block__item">
-                                <img src="/img/works-examples/31.png" alt="Variation of work">
+                                <img class="image-block__image" src="/img/works-examples/31.png"
+                                    alt="Variation of work">
                                 <div class="image-block__content">
                                     <p class="image-block__title">Exercitation</p>
                                     <p class="image-block__text">Ullamco laboris</p>
                                 </div>
                             </div>
                             <div class="image-block__item">
-                                <img src="/img/works-examples/31.png" alt="Variation of work">
+                                <img class="image-block__image" src="/img/works-examples/31.png"
+                                    alt="Variation of work">
                                 <div class="image-block__content">
                                     <p class="image-block__title">Exercitation</p>
                                     <p class="image-block__text">Ullamco laboris</p>
                                 </div>
                             </div>
                             <div class="image-block__item">
-                                <img src="/img/works-examples/33.png" alt="Variation of work">
+                                <img class="image-block__image" src="/img/works-examples/33.png"
+                                    alt="Variation of work">
                                 <div class="image-block__content">
                                     <p class="image-block__title">Exercitation</p>
                                     <p class="image-block__text">Ullamco laboris</p>
@@ -247,18 +250,18 @@
                             <img class="team__img5" src="/img/team/4.png" alt="Face">
                             <img class="team__img6" src="/img/team/5.png" alt="Face">
                         </div>
-                            <div class="team__main-block main-block">
-                                <div class="main-block__block-header block-header">
-                                    <p class="block-header__subtitle block-header_color_white">Repellendus</p>
-                                    <h2 class="block-header__title">Temporibus quibusdam</h2>
-                                </div>
-                                <p class="main-block__text">Nam libero tempore, cum soluta nobis est eligendi optio
-                                    cumque nihil
-                                    impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda
-                                    est.
-                                </p>
-                                <a href="" class="button button_color_yellow">Our team</a>
+                        <div class="team__main-block main-block">
+                            <div class="main-block__block-header block-header">
+                                <p class="block-header__subtitle block-header_color_white">Repellendus</p>
+                                <h2 class="block-header__title">Temporibus quibusdam</h2>
                             </div>
+                            <p class="main-block__text">Nam libero tempore, cum soluta nobis est eligendi optio
+                                cumque nihil
+                                impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda
+                                est.
+                            </p>
+                            <a href="" class="button main-block__button button_color_yellow">Our team</a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -303,14 +306,14 @@
                         <a
                             href="https://www.canadapages.com/location-doutillage-steustache-inc-sainteutache-qc-4504916777/"><img
                                 class="partners__img-logo" src="/img/partners/logo/logo-1.svg" alt="Partner logo"></a>
-                        <a href="https://alpsmj.com/"><img src="/img/partners/logo/logo-2.svg" alt="Partner logo"></a>
-                        <a href="https://worldvectorlogo.com/ru/logo/netcommerce-magazine"><img
+                        <a href="https://alpsmj.com/"><img class="partners__img-logo" src="/img/partners/logo/logo-2.svg" alt="Partner logo"></a>
+                        <a href="https://worldvectorlogo.com/ru/logo/netcommerce-magazine"><img class="partners__img-logo"
                                 src="/img/partners/logo/logo-3.svg" alt="Partner logo"></a>
-                        <a href="https://www.hearme.app/"><img src="/img/partners/logo/logo-4.svg"
+                        <a href="https://www.hearme.app/"><img class="partners__img-logo" src="/img/partners/logo/logo-4.svg"
                                 alt="Partner logo"></a>
-                        <a href="http://regiototal.com/"><img src="/img/partners/logo/logo-5.svg"
+                        <a href="http://regiototal.com/"><img class="partners__img-logo" src="/img/partners/logo/logo-5.svg"
                                 alt="Partner logo"></a>
-                        <a href="https://dsuhornets.com/splash.aspx?id=splash_13"><img
+                        <a href="https://dsuhornets.com/splash.aspx?id=splash_13"><img class="partners__img-logo"
                                 src="/img/partners/logo/logo-6.svg" alt="Partner logo"></a>
                     </div>
                 </div>
@@ -328,7 +331,7 @@
                                 nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda
                                 est.
                             </p>
-                            <a href="" class="button button_color_purple">Our blog</a>
+                            <a href="" class="button main-block__button button_color_purple">Our blog</a>
                         </div>
                         <div class="blog__image-section image-section">
                             <img src="/img/blog/main-image.png" alt="Backgroung block picture"
@@ -339,7 +342,7 @@
                                     rerum necessitatibus saepe eveniet ut et voluptates</p>
                                 <div class="image-section__botton-pic">
                                     <img src="/img/blog/face.png" alt="Face">
-                                    <p>Adaora Azubuike</p>
+                                    <p class="image-section__name">Adaora Azubuike</p>
                                 </div>
                             </div>
                         </div>
@@ -356,14 +359,10 @@
                                 esse
                                 quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas.</p>
                         </div>
-                        <div class="contacts__form">
-                            <form action="sender" method="post">
-                                <div class="contacts__input">
-                                    <input type="text" name="name" placeholder="Your email">
-                                </div>
-                                <button type="button" class="button button_color_purple">Send</button>
-                            </form>
-                        </div>
+                        <form class="contacts__form" action="sender" method="post">
+                            <input class="contacts__input" type="text" name="name" placeholder="Your email">
+                            <button type="button" class="button button_color_purple">Send</button>
+                        </form>
                     </div>
                 </div>
                 <div class="contacts__bottom">
@@ -381,7 +380,8 @@
                             </div>
                             <div class="links-block__block links-block__block-2">
                                 <ul class="links-block__list">
-                                    <li class="links-block__item "><a href="" class="links-block__link links-block__link_first">Tempor</a>
+                                    <li class="links-block__item "><a href=""
+                                            class="links-block__link links-block__link_first">Tempor</a>
                                     </li>
                                     <li class="links-block__item"><a href="" class="links-block__link">Incididunt</a>
                                     </li>
@@ -391,7 +391,8 @@
                             </div>
                             <div class="links-block__block links-block__block-3">
                                 <ul class="links-block__list">
-                                    <li class="links-block__item"><a href="" class="links-block__link links-block__link_first">Magna</a>
+                                    <li class="links-block__item"><a href=""
+                                            class="links-block__link links-block__link_first">Magna</a>
                                     </li>
                                     <li class="links-block__item"><a href="" class="links-block__link">Aliqua</a>
                                     </li>
@@ -402,11 +403,13 @@
                         </div>
                         <div class="contacts__social-block">
                             <div class="contacts__social">
-                                <a href=""><img src="/img/footer/FB.svg" alt="FaceBook logo"></a>
-                                <a href=""><img src="/img/footer/TW.svg" alt="Twitter logo"></a>
-                                <a href=""><img src="/img/footer/Inst.svg" alt="Instagram logo"></a>
+                                <a href=""><img class="contacts__image" src="/img/footer/FB.svg"
+                                        alt="FaceBook logo"></a>
+                                <a href=""><img class="contacts__image" src="/img/footer/TW.svg" alt="Twitter logo"></a>
+                                <a href=""><img class="contacts__image" src="/img/footer/Inst.svg"
+                                        alt="Instagram logo"></a>
                             </div>
-                            <p>Copyright 2019. All Rights Reserved.</p>
+                            <p class="contacts__copyright">Copyright 2019. All Rights Reserved.</p>
                         </div>
                     </div>
                 </div>
@@ -416,14 +419,14 @@
 
 
     <script>
-        var acc = document.getElementsByClassName("accordion__buttom");
+        var acc = document.getElementsByClassName("accordion__button");
         var i;
 
         for (i = 0; i < acc.length; i++) {
             acc[i].addEventListener("click", function () {
-                this.classList.toggle("active");
+                this.classList.toggle("_active");
                 var panel = this.nextElementSibling;
-                this.parentNode.classList.toggle("active"); 
+                this.parentNode.classList.toggle("_active");
                 if (panel.style.display === "block") {
                     panel.style.display = "none";
                 } else {
